--- a/package.json
+++ b/package.json
@@ -1,4 +1,5 @@
 {
+  "packageManager": "pnpm@10.6.3",
   "name": "kronos-guild",
   "version": "0.1.0",
   "private": true,
@@ -6,17 +7,27 @@
     "dev": "next dev --turbopack",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint"
+    "lint": "next lint",
+    "generate:images": "tsx scripts/generateBlogImages.ts"
   },
   "dependencies": {
     "@mdx-js/react": "^3.1.0",
     "@next/mdx": "^15.3.3",
+    "@radix-ui/react-slot": "^1.2.3",
+    "@radix-ui/react-tabs": "^1.1.12",
+    "class-variance-authority": "^0.7.1",
+    "clsx": "^2.1.1",
+    "dotenv": "^16.5.0",
     "gray-matter": "^4.0.3",
+    "lenis": "^1.3.4",
+    "lucide-react": "^0.513.0",
     "next": "15.3.3",
     "next-mdx-remote": "^5.0.0",
+    "openai": "^4.28.0",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
-    "remark-gfm": "^4.0.1"
+    "remark-gfm": "^4.0.1",
+    "tailwind-merge": "^3.3.0"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3",
@@ -27,6 +38,9 @@
     "eslint": "^9",
     "eslint-config-next": "15.3.3",
     "tailwindcss": "^4",
+    "ts-node": "^10.9.1",
+    "tsx": "^4.19.2",
+    "tw-animate-css": "^1.3.4",
     "typescript": "^5"
   }
 }
