--- a/package.json
+++ b/package.json
@@ -15,10 +15,12 @@
     "@next/mdx": "^15.3.3",
     "@radix-ui/react-slot": "^1.2.3",
     "@radix-ui/react-tabs": "^1.1.12",
+    "@tailwindcss/typography": "^0.5.16",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "dotenv": "^16.5.0",
     "gray-matter": "^4.0.3",
+    "highlight.js": "^11.11.1",
     "lenis": "^1.3.4",
     "lucide-react": "^0.513.0",
     "next": "15.3.3",
@@ -26,7 +28,10 @@
     "openai": "^4.28.0",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
+    "rehype-highlight": "^7.0.2",
+    "rehype-pretty-code": "^0.14.1",
     "remark-gfm": "^4.0.1",
+    "shiki": "^3.7.0",
     "tailwind-merge": "^3.3.0"
   },
   "devDependencies": {
